src/style/index.css
@import url('https://fonts.googleapis.com/css?family=Lato');

:root {
    --main-background-color: #1e1e1e;
    --main-secondary-background-color: #131313;
    --main-color: #1C39BB;
    --main-text-color: white;
    --main-color-hover-group: #222222;
}

body, html{
  font-family: 'Lato', sans-serif;
  background-color: var(--main-background-color);
}


.subzero-theme{
    background-color: var(--main-color);
}

.item{
    width: 90%;
    border-bottom: 1px solid;
    margin-left: 2%;
}
.group-color {
    display:inline-block;
    margin-left:10px;
    margin-right: 10px;
    width: 10px; 
    height: 10px;
    border-radius: 50%; 
}
.group-modify-icon{
    display: inline-block;
    margin-top: 10px;
    width: 20px;
    height: 20px;
    background-image: url('../resource/Icon/update.png');
    background-size: cover;
}
.group-type {
    display:inline-block; 
    width:100px; 
}
.group-label{
    color: var(--main-text-color);
    font-size: 14px;
}
.group-item{
    width: 100%;
    margin-bottom: 5px;
    height: 50px;
    cursor: pointer;
}
.group-item:hover{
    background-color: var(--main-color-hover-group);
}

.clear-button{
    background-color: var(--main-secondary-background-color);
    border: none;
    color: var(--main-text-color);
    margin-left: 20px;
    margin-top: 2%;
    cursor: pointer;
}

.clear-button:hover{
    color: #1C39BB;
}

.content{
    grid-row: 1/4;
    grid-column: 2/4;
    margin-left: 5px;
}

.footer{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    position:fixed;
    left:0px;
    bottom:0px;
    height:10%;
    width:100%;
 }
.add-project{
    grid-column: 4;
}

.set-themes {
    grid-column: 1;
    z-index: 2;
}

.sidenav {
    height: 100%;
    width: 160px;
    position: fixed;
    z-index: 0;
    top: 0;
    left: 0;
    background-color: var(--main-secondary-background-color);
    border-right: 1px solid;
    border-right-color: #1C39BB;
    overflow-x: hidden;
    padding-top: 20px;
    overflow-y: auto;
}

.wrapper{
    display: grid;
    grid-template-rows: 1fr 3fr 1fr 1fr;
    grid-template-columns: 150px 1fr 150px;
    height: 85vh;
}

.button {
    background-color: var(--main-background-color);
    border: 2px solid;
    border-color: var(--main-color);
    color: var(--main-text-color);
    padding: 6px 40px;
    text-align: center;
    border-radius: 2em;
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
    margin: 4px 2px;
    transition-duration: 0.4s;
    cursor: pointer;
}

.button:hover {
    background-color: var(--main-color);
    color: white;
    padding: 8px 42px;
}

.button-cancel{
    background-color: var(--main-background-color);
    border: 2px solid;
    border-color: #ff0000;
    color: var(--main-text-color);
    padding: 6px 40px;
    text-align: center;
    border-radius: 2em;
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
    margin: 4px 2px;
    transition-duration: 0.4s;
    cursor: pointer;
}
.button-cancel:hover{
    color: white;
    padding: 8px 42px;
    background-color: #ff0000;
}
.title-project{
    color:var(--main-text-color);
    font-size: 16px;
}

.project-modify-icon{
    display: inline-block;
    margin-top: 10px;
    width: 40px;
    height: 40px;
    background-image: url('../resource/Icon/update.png');
    background-size: cover;
    cursor: pointer;
}
.project-delete-icon{
    display: inline-block;
    margin-top: 10px;
    width: 40px;
    height: 40px;
    background-image: url('../resource/Icon/remove.png');
    background-size: cover;
}

.project-git-icon{
    display: inline-block;
    margin-top: 10px;
    width: 40px;
    height: 40px;
    background-image: url('../resource/Icon/octocat.png');
    background-size: cover;
}

.editor-icon{
    display: inline-block;
    width: 50px;
    height: 50px;
    background-size: cover;
    opacity: 0.4;
    margin-left: 30px;
}

.editor-icon:hover{
    opacity: 1;
}


.autocomplete-items {
    position: absolute;
    border: 1px solid #d4d4d4;
    border-bottom: none;
    border-top: none;
    z-index: 99;
    top: 100%;
    left: 0;
    right: 0;
    color: black;
}

.autocomplete-items div {
  padding: 10px;
  cursor: pointer;
  background-color: #fff; 
  border-bottom: 1px solid #d4d4d4; 
}

.autocomplete-items div:hover {
  background-color: #e9e9e9; 
}

.autocomplete-active {
  background-color: DodgerBlue !important; 
  color: #131313; 
}

